force-app/main/default/objects/Partner_T_C_Master__c/Partner_T_C_Master__c.object-meta.xml
<CustomObject>
    <label>Partner T&amp;C Master</label>
    <nameField>
        <label>Partner T&amp;C Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner T&amp;C Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>