force-app/main/default/objects/Partner_T_C_Master__c/fields/Cannot_Uncheck__c.field-meta.xml
<CustomField>
    <fullName>Cannot_Uncheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cannot_Uncheck</label>
    <type>Checkbox</type>
</CustomField>