force-app/main/default/objects/Partner_T_C_Master__c/fields/isMandatory__c.field-meta.xml
<CustomField>
    <fullName>isMandatory__c</fullName>
    <defaultValue>true</defaultValue>
    <label>isMandatory</label>
    <type>Checkbox</type>
</CustomField>