force-app/main/default/objects/Partner_T_C_Master__c/fields/T_C_Type__c.field-meta.xml
<CustomField>
    <fullName>T_C_Type__c</fullName>
    <label>T&amp;C Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Collection and Use of Personal Information</fullName>
            </value>
            <value>
                <fullName>Cross-border Transfer of Personal Information</fullName>
            </value>
            <value>
                <fullName>Terms of Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>