force-app/main/default/objects/Partner_T_C_Master__c/fields/T_C_Use__c.field-meta.xml
<CustomField>
    <fullName>T_C_Use__c</fullName>
    <label>T&amp;C Use</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Enrollment</fullName>
            </value>
            <value>
                <fullName>Sign Up</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>