force-app/main/default/objects/Partner_T_C_Master__c/validationRules/IsActive_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>IsActive_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>Cannot_Uncheck__c = true</errorConditionFormula>
    <errorMessage>Can’t change the ‘isActive’ value to false. At least one ‘isActive’ value should exist according ‘T&amp;C Type’ and ‘T&amp;C Use’</errorMessage>
</ValidationRule>