force-app/main/default/objects/Partner_T_C_Master__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Apply_Date__c</columns>
    <columns>T_C_Use__c</columns>
    <columns>T_C_Type__c</columns>
    <columns>isActive__c</columns>
    <columns>isMandatory__c</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>